Upgraded to Java EE 7 (GF4 and Jersey 2.2). Implemented a simple ApplicationEventListener.
Signed-off-by: Paulo Pires <pjpires@gmail.com>